--- a/Main.html
+++ b/Main.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <div class="middle" >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <h1 >Hi ya m3lem</h1>
+    <h6>Bye ya M3lem</h6>
+
+</div>
 </head>
 <body>
     
+   
+
 </body>
 </html>
